--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,18 @@
-body {
+h2 {
+  text-align: center;
+  margin: 0.5em;
+}
+
+.navbar-brand {
+  font-size: 1.6em;
+}
+
+.table-container {
+  width: 80vw;
+  margin: 0 auto;
+}
+
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -11,3 +25,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+ */
