--- a/src/index.css
+++ b/src/index.css
@@ -7,22 +7,11 @@ h2 {
   font-size: 1.6em;
 }
 
+.forecasts {
+  margin-top: 1em;
+}
+
 .table-container {
   width: 80vw;
   margin: 0 auto;
 }
-
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
- */
